--- a/crates/dental-server/Cargo.toml
+++ b/crates/dental-server/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
+dotenvy = "0.15"
