--- a/Dockerfile.gateway
+++ b/Dockerfile.gateway
@@ -2,6 +2,7 @@ FROM rust:1.85-bookworm AS builder
 
 WORKDIR /app
 COPY Cargo.toml Cargo.lock ./
+COPY proto/ proto/
 COPY crates/ crates/
 
 RUN cargo build --release --bin dental-gateway
