--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,6 +2,7 @@ FROM rust:1.85-bookworm AS builder
 
 WORKDIR /app
 COPY Cargo.toml Cargo.lock ./
+COPY proto/ proto/
 COPY crates/ crates/
 
 RUN cargo build --release --bin dental-server
@@ -12,6 +13,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
 
 COPY --from=builder /app/target/release/dental-server /usr/local/bin/dental-server
 
-EXPOSE 3000
+EXPOSE 50051
 
 CMD ["dental-server"]
