--- a/crates/dental-gateway/Cargo.toml
+++ b/crates/dental-gateway/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 [dependencies]
 dental-common = { path = "../dental-common" }
 axum = "0.8"
+tonic = "0.12"
+prost = "0.13"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-reqwest = { version = "0.12", features = ["json"] }
 dotenvy = "0.15"
+
+[build-dependencies]
+tonic-build = "0.12"
+protoc-bin-vendored = "3"
