--- a/crates/dental-server/Cargo.toml
+++ b/crates/dental-server/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 dental-common = { path = "../dental-common" }
 dental-core = { path = "../dental-core" }
 dental-db = { path = "../dental-db" }
-axum = "0.8"
+tonic = "0.12"
+prost = "0.13"
 tokio = { version = "1", features = ["full"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
 dotenvy = "0.15"
+
+[build-dependencies]
+tonic-build = "0.12"
+protoc-bin-vendored = "3"
