--- a/crates/dental-gateway/Cargo.toml
+++ b/crates/dental-gateway/Cargo.toml
@@ -11,9 +11,12 @@ prost = "0.13"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+uuid = { version = "1", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 dotenvy = "0.15"
+utoipa = { version = "5", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "9", features = ["axum",  "debug-embed"] }
 
 [build-dependencies]
 tonic-build = "0.12"
